[project]
name = "flame-hub-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Maximilian Jugl", email = "Maximilian.Jugl@medizin.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pydantic (>=2.10.0,<3.0.0)",
    "httpx (>=0.28.0,<0.29.0)"
]
license = "Apache-2.0"

[tool.poetry]
packages = [{ include = "flame_hub" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
ruff = ">=0.9.0"
pre-commit = ">=4.0.0"
testcontainers = {extras = ["minio", "mysql", "rabbitmq", "redis", "vault"], version = ">=4.9.0"}
pytest-dotenv = ">=0.5.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
